--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -73,7 +73,7 @@ Question: #3
 \pagebreak
 
 \begin{abstract}
-This report aims to give a detailed overview of the research progress I made between March 2018 and March 2019, the first year of this PhD project into logistical decisions regarding offshore wind farms. It will explain the research subject, give an overview of the relevant literature I've read and the limitations of the current research. Furthermore, it will discuss the work I've done on a simulator, to be used for later research. Finally, the next steps and ultimate goals of this project are described. 
+This report aims to give a detailed overview of the research progress I made between March 2018 and September 2019, the first year of this PhD project into logistical decisions regarding offshore wind farms. It will explain the research subject, give an overview of the relevant literature I've read and the limitations of the current research. Furthermore, it will discuss the work I've done on a simulator, to be used for later research. Finally, the next steps and ultimate goals of this project are described. 
 \end{abstract}
 
 \pagebreak
@@ -83,7 +83,8 @@ This report aims to give a detailed overview of the research progress I made bet
 \pagebreak
 
 \section{Introduction} \label{s:intro}
-Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and dismantling of windfarms in various seas and oceans, primarily the North Sea. The installation and dismantling projects can often take up to several years, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often upwards of \pounds 100.000 per day\cite{barlow2014support}, hence a project with multiple vessels over many months can cost upwards of \pounds 100 million \cite{kaiser2010offshore}. Therefore, even small improvements to the schedules can save significant amounts of money.
+%TODO: Add refs for `several years' and `30 years' claims
+Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and decommissioning of windfarms in various seas and oceans, primarily the North Sea. The installation and decommissioning projects can often take up to several years, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often upwards of \pounds 100.000 per day\cite{barlow2014support}, hence a project with multiple vessels over many months can cost upwards of \pounds 100 million \cite{kaiser2010offshore}. Therefore, even small improvements to the schedules can save significant amounts of money.
 
 Because of this, I expected a lot of research in this area had already been conducted, but this turned out to be less the case than I would have expected. Most research is fairly recent, and there are significant literature gaps. The primary obstacle in this scheduling problem which separates it from more traditional scheduling problems is the high degree of non-deterministic factors, mainly related to the weather conditions. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on big industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Something else which can further limit possible schedules is the inflexibility involved in vessel rental, since vessels of the required caliber cannot be rented on short notice, and often need to be rented for at least some minimum amount of time \cite{kerkhove2017optimised}, so adaptive in-the-moment scheduling is impossible and we cannot simply wait for an expected period of good weather based on real-time data to rent the vessels; if we expected some period to have good weather but this turns out not to be the case, we will often have the vessels rented but unusable. This means the problem has a lot of nondeterministic factors which have a large impact; factors which any good solution approach will have to take into account. 
 
@@ -94,16 +95,16 @@ In this report I will talk about my progress and what I have learned over the pa
 \section{The project} \label{s:project}
 In this section I will attempt to summarise the different aspects  have seen on the project, in enough detail for the reader to understand the rest of the report, and understand the goals I am working towards.
 
-My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what most of this report will be about. 
+My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what the majority this report will be about. 
 
 \subsection{Logistical decisions on offshore windfarms} \label{ss:logdec}
 A typical offshore windfarm (OWF) will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. Between these structures are many cables, connecting the WTGs to the OSPs, generally with a number of sets of WTGs connected serially. Then from each OSP there are specialized cables back to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017,barlow2018mixed}. 
 
 The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommission are similar; a set of tasks needs to be completed in a cost effective way. The primary difference is the reversed order of the tasks. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This is often a contractual requirement imposed by the government, and it would also mean the farm starts making money significantly earlier, and can therefore have big impacts on desired schedules. In some situations the company might even have contractually or legally enforced deadlines for certain milestones, like 10\% or 50\% of the WTGs being operational. 
 
-The structure of maintenance projects is completely different. Scheduling maintenance has to be done significantly in advance, as the vessels used need to be reserved. For this reason simply reacting to failures on the site would mean it can take a long time before a failure is repaired. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors means a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
+The structure of maintenance projects is completely different. Scheduling maintenance has to be done significantly in advance, as the vessels used need to be reserved. For this reason simply reacting to failures on the site would mean it can take a long time before a failure is repaired. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
 
-The stochasticity of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some company may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
+The stochasticity of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some compaiesy may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
 
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
@@ -117,10 +118,10 @@ Over the past year, I have spent most of my time reading up on the subject, both
 The explicit research objective is: 
 
 \begin{objective}
-Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on models for each phase of the life-cycle.
+Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
 \end{objective}
 
-The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommission projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The clearest decision that impacts all future decisions is the layout of the site. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation projects can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommission project starts. Here the connection between maintenance and decommission may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommission of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommission policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
+The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The decision that impacts all future decisions most clearly is the layout of the site, as this affects the distance and travel times between the assets during all other operations. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation projects can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommissioning project starts. Here the connection between maintenance and decommission may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommission of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommission policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
 
 This objective has three sub-objectives:
 
@@ -136,7 +137,7 @@ Create an integrated optimisation and simulation model for the maintenance proje
 
 \begin{restatable}{subobjective}{subobjthree}
 \label{subobjthree}
-Create an integrated optimisation and simulation model for the decommission projects of an OWF. 
+Create an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
 \end{restatable}
 
 As each of these three sub-objectives is already a big goal in itself, these models will likely be based on models from the literature. For the installation projects, I already have a fairly clear view of how I want to structure this model, as will be explained later in this report. Additionally, the decommission model will likely be similar to the installation model, as these projects are assumed to be similar in structure. 
@@ -337,7 +338,7 @@ In this section I will return to my objectives from \Cref{ss:objs} to talk more 
 \subsection{Research plans} \label{ss:plans}
 
 \begin{objective}
-Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on models for each phase of the life-cycle.
+Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
 \end{objective}
 
 %TODO add the integration model stuff here, maybe flowchart (or that at end of section)
@@ -366,7 +367,7 @@ In the six months after that, so the second half of the second year of my PhD, t
 
 \bigskip
 
-At the start of the third year of my PhD the models for both installation projects and maintenance projects should be well formed, and I will aim to combine them. The decommission projects will also be included in this overarching model, which will likely be very similar to installation projects in structure. This is likely to be difficult, even if both models are already implemented in the simulator, as integrated models have proven to be a complex subject in itself. Realistic experiments can also be run now, and my goal is to adapt the models to accommodate for more extensive research into directions which are indicated to be useful by the earlier experiments. For example, if realistic imperfect weather forecasts seem like a valuable research topic, I aim to adapt the models and simulator to include them. This also includes various alternative optimisation models, as multiple alternatives should be experimented with to compare their performance over the entire life-cycle of an OWF which is now included in the model. Finally experiments with different layouts of the OWF can be performed to see their impact on the costs of installation, maintenance and decommission of the site. 
+At the start of the third year of my PhD the models for both installation projects and maintenance projects should be well formed, and I will aim to combine them. The decommissioning projects will also be included in this overarching model, which will likely be very similar to installation projects in structure. This is likely to be difficult, even if both models are already implemented in the simulator, as integrated models have proven to be a complex subject in itself. Realistic experiments can also be run now, and my goal is to adapt the models to accommodate for more extensive research into directions which are indicated to be useful by the earlier experiments. For example, if realistic imperfect weather forecasts seem like a valuable research topic, I aim to adapt the models and simulator to include them. This also includes various alternative optimisation models, as multiple alternatives should be experimented with to compare their performance over the entire life-cycle of an OWF which is now included in the model. Finally experiments with different layouts of the OWF can be performed to see their impact on the costs of installation, maintenance and decommission of the site. 
 
 In the final 6 months of my PhD, I will hopefully focus mostly on writing. While I plan to continually write about my progress and findings, there will always be a significant portion to write up in the end. That said, any additional experiments and final changes can also be performed and implemented during this time. 
 
